# ezid-client-tools

./: .flake8  .gitignore  README.md  batch-download.sh  batch-register.py  batch-register3.README.md  batch-register3.py  ezid3.py  pyproject.toml  tests.py
.github/workflows/: build_and_release.yml  python-package.yml
ezid_client_tools/: __init__.py  batch-register3.py  client.py  ezid3.py  utils.py
src/ezid_client_tools/: __init__.py  batch_register.py  client.py  ezid.py  version.py
tests/: test_client.py
