[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ezid_client_tools"
authors = [
    {name = "UC Curation Center (California Digital Library)", email = "cdl@www.cdlib.org"}
]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/CDLUC3"

[project.scripts]
batch-register = "ezid_client_tools.batch_register:main"
ezid = "ezid_client_tools.ezid:main"

[tools.flit.metadata]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# batch-download.sh to be installed in bin
